# SpectraAI

./: .env.example  .gitignore  LICENSE  POSTER_HIGH_RES_ASSEMBLY_GUIDE.md  POSTER_MASTER_DRAFT.md  POSTER_PLAN_FINAL.md  README.md  pyproject.toml  requirements.txt  run.py  start.sh
data/sample_ir/: README.md
data/sample_nmr/: README.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: generate_databases.py
src/spectra_ai/: __init__.py  main.py
src/spectra_ai/ai/: __init__.py  characterization_writer.py  cross_spectral_analyzer.py  image_spectra_parser.py  impurity_detector.py  ir_interpreter.py  llm_client.py  ms_validator.py  nmr_interpreter.py  retrosynthesis_planner.py  structure_predictor.py
src/spectra_ai/chem/: __init__.py  atom_mapper.py  conformer_generator.py  nmr_correlations.py  nmr_correlations.py.bak  tautomer_enumerator.py
src/spectra_ai/core/: __init__.py  ir_data.py  molecule.py  ms_data.py  nmr_data.py  prediction_result.py  uv_data.py  validation_report.py
src/spectra_ai/parsers/: __init__.py  csv_parser.py  ir_parser.py  jcamp_parser.py  ms_parser.py  nmr_text_parser.py
src/spectra_ai/prediction/: __init__.py  candidate_ranker.py  nmr_predictor.py  scaffold_enumerator.py
src/spectra_ai/session/: compound_session.py
src/spectra_ai/ui/: __init__.py  batch_panel.py  characterization_panel.py  comparison_panel.py  input_panel.py  interpretation_panel.py  library_panel.py  main_window.py  main_window.py.bak  mode_navigator.py  nmr_maps_panel.py  retrosynthesis_panel.py  spectrum_panel.py  structure_panel.py  validation_panel.py
src/spectra_ai/utils/: __init__.py  atom_properties.py  export_utils.py  formula_utils.py  ir_reference.py  nmr_reference.py  pdf_generator.py  smiles_utils.py
src/spectra_ai/validation/: __init__.py  carbon_count_checker.py  cross_spectral_checker.py  functional_group_checker.py  ir_structure_checker.py  ms_formula_checker.py  (+3 more)
tests/: __init__.py  test_ai.py  test_core.py  test_parsers.py  test_validation.py
(+75 files in other folders)
