[project]
name = "spectra-ai"
version = "1.0.0"
description = "Multi-Spectral Generative AI Suite for Heterocycle Characterization in Synthetic Organic Chemistry"
authors = [
    {name = "SpectraAI Research Team", email = "research@spectraai.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "chemistry", "NMR", "spectroscopy", "AI", "generative-ai",
    "heterocycles", "structure-elucidation", "organic-chemistry",
    "machine-learning", "claude", "gemini"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.5.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
rdkit = ["rdkit-pypi>=2023.9.1"]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
spectra-ai = "spectra_ai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_ai"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
